--- a/archivo.html
+++ b/archivo.html
@@ -1,1 +1,32 @@
 
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Archivo Histórico</title>
+  <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+  <header>
+    <h1>Archivo Histórico</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="entradas.html">Entradas</a></li>
+        <li><a href="infochilejudicial.html">InfoChile Judicial</a></li>
+        <li><a href="infochoapa.html">InfoChoapa</a></li>
+        <li><a href="archivo.html">Archivo Histórico</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <p>En esta sección encontrarás el acceso al archivo histórico de publicaciones anteriores alojadas en nuestro blog original:</p>
+    <p><a href="https://acastro2012.wordpress.com" target="_blank"><strong>➡ Visitar archivo histórico en WordPress</strong></a></p>
+    <p>Este material se mantiene disponible como parte del proceso de evolución y continuidad digital del proyecto EfraNews.</p>
+  </main>
+  <footer>
+    <p>&copy; 2025 EfraNews.cl</p>
+  </footer>
+</body>
+</html>
