Actualiza index.html
Incorpora boton acceso a archivo histórico

--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
     <h1>EfraNews.cl</h1>
     <p class="frase">Desde el punto más estrecho de Chile, escribo a todo lo ancho del mundo.</p>
     <nav>
-      <ul>
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="entradas.html">Entradas</a></li>
-        <li><a href="infochilejudicial.html">InfoChile Judicial</a></li>
-        <li><a href="infochoapa.html">InfoChoapa</a></li>
-      </ul>
-    </nav>
+    <ul>
+      <li><a href="index.html">Inicio</a></li>
+      <li><a href="entradas.html">Entradas</a></li>
+      <li><a href="infochilejudicial.html">InfoChile Judicial</a></li>
+      <li><a href="infochoapa.html">InfoChoapa</a></li>
+      <li><a href="archivo.html">Archivo Histórico</a></li>
+    </ul>
+  </nav>
   </header>
   <main>
     <h2>Bienvenido a EfraNews.cl</h2>
