--- a/index.html
+++ b/index.html
@@ -4,29 +4,34 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="description" content="EfraNews.cl - Plataforma informativa desde el punto más estrecho de Chile">
-  <title>EfraNews.cl</title>
+  <title>Inicio | EfraNews</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <header>
-    <img src="assets/logo.png" alt="Logo EfraNews" class="logo">
     <h1>EfraNews.cl</h1>
-    <p class="frase">Desde el punto más estrecho de Chile, escribo a todo lo ancho del mundo.</p>
     <nav>
-    <ul>
-      <li><a href="index.html">Inicio</a></li>
-      <li><a href="entradas.html">Entradas</a></li>
-      <li><a href="infochilejudicial.html">InfoChile Judicial</a></li>
-      <li><a href="infochoapa.html">InfoChoapa</a></li>
-      <li><a href="archivo.html">Archivo Histórico</a></li>
-    </ul>
-  </nav>
+      <ul>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="entradas.html">Entradas</a></li>
+        <li><a href="infojudicial.html">InfoJudicial</a></li>
+        <li><a href="infochoapa.html">InfoChoapa</a></li>
+      </ul>
+    </nav>
   </header>
+
   <main>
-    <h2>Bienvenido a EfraNews.cl</h2>
-    <p>Este es un espacio informativo y territorial impulsado por tecnología e innovación.</p>
+    <section class="bienvenida">
+      <h2>Bienvenida</h2>
+      <p>Este blog nace como un espacio para pensar, observar y escribir.</p>
+      <p>Es, también, un espacio terapéutico: un lugar donde la escritura sirve para ordenar el caos, explorar emociones y darle forma a las experiencias que muchas veces pasan de largo.</p>
+      <p>Aquí conviven la experiencia personal, el territorio y el derecho. No se trata de un medio de prensa ni de un proyecto académico, sino de una bitácora que busca comprender el entorno desde la palabra escrita.</p>
+      <p>EfraNews es también continuidad: algunos textos provienen de una etapa anterior publicada en WordPress, que seguirá disponible como archivo histórico para quien quiera revisarlo.</p>
+      <p>A partir de hoy, este será el espacio principal para compartir reflexiones, comentarios y relatos con sentido.</p>
+      <p><strong>Gracias por llegar hasta aquí. Lo que viene, lo escribimos en camino.</strong></p>
+    </section>
   </main>
+
   <footer>
     <p>&copy; 2025 EfraNews.cl</p>
   </footer>
