--- a/index.html
+++ b/index.html
@@ -6,19 +6,59 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Inicio | EfraNews</title>
   <link rel="stylesheet" href="css/styles.css">
+  <style>
+    .header {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      padding: 1em;
+    }
+    .header img {
+      max-height: 80px;
+    }
+    .bienvenida {
+      text-align: justify;
+      padding: 1em;
+    }
+    .archivo-btn {
+      display: inline-block;
+      margin-top: 1em;
+      padding: 0.5em 1em;
+      background-color: #4C8C4A;
+      color: white;
+      text-decoration: none;
+      border-radius: 4px;
+    }
+    nav ul {
+      list-style: none;
+      display: flex;
+      gap: 1em;
+      padding: 0;
+    }
+    nav li {
+      display: inline;
+    }
+    nav a {
+      text-decoration: none;
+      color: #2c2c2c;
+      font-weight: bold;
+    }
+  </style>
 </head>
 <body>
-  <header>
+  <header class="header">
+    <img src="assets/logo.png" alt="Logo EfraNews">
     <h1>EfraNews.cl</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="entradas.html">Entradas</a></li>
-        <li><a href="infojudicial.html">InfoJudicial</a></li>
-        <li><a href="infochoapa.html">InfoChoapa</a></li>
-      </ul>
-    </nav>
   </header>
+
+  <nav>
+    <ul>
+      <li><a href="index.html">Inicio</a></li>
+      <li><a href="entradas.html">Entradas</a></li>
+      <li><a href="infochilejudicial.html">InfoJudicial</a></li>
+      <li><a href="infochoapa.html">InfoChoapa</a></li>
+    </ul>
+  </nav>
 
   <main>
     <section class="bienvenida">
@@ -29,11 +69,12 @@
       <p>EfraNews es también continuidad: algunos textos provienen de una etapa anterior publicada en WordPress, que seguirá disponible como archivo histórico para quien quiera revisarlo.</p>
       <p>A partir de hoy, este será el espacio principal para compartir reflexiones, comentarios y relatos con sentido.</p>
       <p><strong>Gracias por llegar hasta aquí. Lo que viene, lo escribimos en camino.</strong></p>
+      <p><a href="https://acastro2012.wordpress.com" target="_blank" class="archivo-btn">Ver archivo histórico en WordPress</a></p>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 EfraNews.cl</p>
+    <p style="text-align:center;">&copy; 2025 EfraNews.cl</p>
   </footer>
 </body>
 </html>
