--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
   </header>
 
   <nav>
-    <ul>
-      <li><a href="index.html">Inicio</a></li>
-      <li><a href="entradas.html">Entradas</a></li>
-      <li><a href="infochilejudicial.html">InfoJudicial</a></li>
-      <li><a href="infochoapa.html">InfoChoapa</a></li>
-    </ul>
-  </nav>
+  <ul>
+    <li><a href="index.html" class="archivo-btn">Inicio</a></li>
+    <li><a href="entradas.html" class="archivo-btn">Entradas</a></li>
+    <li><a href="infochilejudicial.html" class="archivo-btn">InfoJudicial</a></li>
+    <li><a href="infochoapa.html" class="archivo-btn">InfoChoapa</a></li>
+  </ul>
+</nav>
 
   <main>
     <section class="bienvenida">
