--- a/archivo.html
+++ b/archivo.html
@@ -21,7 +21,7 @@
     </nav>
   </header>
   <main>
-    <p>En esta sección encontrarás el acceso al archivo histórico de publicaciones anteriores alojadas en nuestro blog original:</p>
+    <p>En esta sección encontrarás el acceso al archivo histórico de publicaciones anteriores alojadas en mi blog original:</p>
     <p><a href="https://acastro2012.wordpress.com" target="_blank"><strong>➡ Visitar archivo histórico en WordPress</strong></a></p>
     <p>Este material se mantiene disponible como parte del proceso de evolución y continuidad digital del proyecto EfraNews.</p>
   </main>
